--- a/CS/MainPage.xaml
+++ b/CS/MainPage.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SignPdfExample.MainPage">
+             x:Class="SignPdfExample.MainPage"
+             Title="Sign PDF File">
 
     <ScrollView>
         <VerticalStackLayout
@@ -9,9 +10,9 @@
             VerticalOptions="Center">
 
                 <Image x:Name="imageControl"
-                    Source="logo.svg"
-                    HeightRequest="500"
-                    HorizontalOptions="Center" Aspect="AspectFit" />  
+                    Source="logo"
+                    HeightRequest="300"
+                    HorizontalOptions="Start" Aspect="AspectFit" />  
             
             <Label
                 Text="Sign PDF Files"
