--- a/CS/1-Get_Started/MainPage.xaml
+++ b/CS/1-Get_Started/MainPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:dx="clr-namespace:DevExpress.Maui.Core;assembly=DevExpress.Maui.Core"
              x:Class="SignPdfExample.MainPage"
              Title="Sign PDF File">
 
@@ -9,7 +10,7 @@
             Spacing="15"
             VerticalOptions="Center">
 
-                <Image x:Name="imageControl"
+                <dx:DXImage x:Name="imageControl"
                     Source="logo"
                     HeightRequest="300"
                     HorizontalOptions="Start" Aspect="AspectFit" />  
@@ -25,9 +26,9 @@
                 FontSize="18"
                 HorizontalOptions="Center" />
 
-            <Button
+            <dx:DXButton
                 x:Name="CounterBtn"
-                Text="Sign a File"
+                Content="Sign a File"
                 SemanticProperties.Hint="Signs a PDF file"
                 Clicked="OnOpenWebButtonClicked"
                 HorizontalOptions="Center" />
