--- a/CS/3-Draw_a_Custom_Signature/Views/MainPage.xaml
+++ b/CS/3-Draw_a_Custom_Signature/Views/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:dxdf="clr-namespace:DevExpress.Maui.DataForm;assembly=DevExpress.Maui.Editors"
     xmlns:dxc="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls" 
+    xmlns:dx="clr-namespace:DevExpress.Maui.Core;assembly=DevExpress.Maui.Core" 
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:local="clr-namespace:SignPDF;assembly=SignPDF" 
     xmlns:viewmodels="clr-namespace:SignPDF.ViewModels"
@@ -18,14 +19,14 @@
     <Grid>
         <local:PinchAndPanContainer>
             <local:PinchAndPanContainer>
-                <Image VerticalOptions="Center" Source="{Binding PdfPreview}" x:Name="previewImage" Aspect="AspectFit"/>
+                <dx:DXImage VerticalOptions="Center" Source="{Binding PdfPreview}" x:Name="previewImage" Aspect="AspectFit"/>
             </local:PinchAndPanContainer>
         </local:PinchAndPanContainer>
-        <Button Text="✍🏻" FontSize="24" Command="{Binding OpenSignatureViewCommand}" HorizontalOptions="End" VerticalOptions="End" CornerRadius="16" WidthRequest="56" HeightRequest="56" Margin="0,0,25,25" Padding="0">
-            <Button.Shadow>
+        <dx:DXButton Content="✍🏻" FontSize="24" Command="{Binding OpenSignatureViewCommand}" HorizontalOptions="End" VerticalOptions="End" CornerRadius="16" WidthRequest="56" HeightRequest="56" Margin="0,0,25,25" Padding="0">
+            <dx:DXButton.Shadow>
                 <Shadow Brush="Gray" Offset="4,8" Radius="10" />
-            </Button.Shadow>
-        </Button>
+            </dx:DXButton.Shadow>
+        </dx:DXButton>
         <dxc:DXPopup x:Name="signatureDrawerPopup" IsOpen="{Binding IsSignatureViewOpened, Mode=TwoWay}" ScrimColor="#50505050" AllowScrim="true">
             <Grid RowDefinitions="*,Auto">
                 <toolkit:DrawingView IsMultiLineModeEnabled="True" Background="White" Lines="{Binding SignatureLines, Mode=TwoWay}" x:Name="signatureDrawer" HeightRequest="300" WidthRequest="350">
@@ -33,10 +34,10 @@
                         <local:DrawingViewMVVMBehavior x:Name="drawingMvvmBehavior" DrawingAcceptedCommand="{Binding SignPdfCommand}"/>
                     </toolkit:DrawingView.Behaviors>
                 </toolkit:DrawingView>
-                <dxc:SimpleButton Text="&#8634;" Command="{Binding Source={x:Reference drawingMvvmBehavior}, Path=ClearCommand}" VerticalOptions="Start" HorizontalOptions="End" Background="Transparent" TextColor="Black" FontSize="24" HeightRequest="40" WidthRequest="40" CornerRadius="20" Padding="0" Margin="24" />
+                <dx:DXButton Content="&#8634;" Command="{Binding Source={x:Reference drawingMvvmBehavior}, Path=ClearCommand}" VerticalOptions="Start" HorizontalOptions="End" Background="Transparent" TextColor="Black" FontSize="24" HeightRequest="40" WidthRequest="40" CornerRadius="20" Padding="0" Margin="24" />
                 <HorizontalStackLayout HorizontalOptions="End" Grid.Row="1" Margin="24">
-                    <dxc:SimpleButton Text="Cancel" Command="{Binding CloseSignatureViewCommand}" TextColor="{AppThemeBinding Light=#FEFEFE, Dark={StaticResource Primary}}" Margin="4,0"/>
-                    <dxc:SimpleButton Text="Sign PDF" Command="{Binding Source={x:Reference drawingMvvmBehavior}, Path=AcceptDrawingCommand}" TextColor="{AppThemeBinding Light=#FEFEFE, Dark={StaticResource Primary}}" Margin="4,0"/>
+                    <dx:DXButton Content="Cancel" Command="{Binding CloseSignatureViewCommand}" TextColor="{AppThemeBinding Light=#FEFEFE, Dark={StaticResource Primary}}" Margin="4,0"/>
+                    <dx:DXButton Content="Sign PDF" Command="{Binding Source={x:Reference drawingMvvmBehavior}, Path=AcceptDrawingCommand}" TextColor="{AppThemeBinding Light=#FEFEFE, Dark={StaticResource Primary}}" Margin="4,0"/>
                 </HorizontalStackLayout>
             </Grid>
         </dxc:DXPopup>
