--- a/CS/3-Draw_a_Custom_Signature/Views/MainPage.xaml
+++ b/CS/3-Draw_a_Custom_Signature/Views/MainPage.xaml
@@ -35,10 +35,10 @@
                     </toolkit:DrawingView.Behaviors>
                 </toolkit:DrawingView>
                 <dx:DXButton Content="&#8634;" Command="{Binding Source={x:Reference drawingMvvmBehavior}, Path=ClearCommand}" VerticalOptions="Start" HorizontalOptions="End" Background="Transparent" TextColor="Black" FontSize="24" HeightRequest="40" WidthRequest="40" CornerRadius="20" Padding="0" Margin="24" />
-                <HorizontalStackLayout HorizontalOptions="End" Grid.Row="1" Margin="24">
+                <dx:DXStackLayout Orientation="Horizontal" HorizontalOptions="End" Grid.Row="1" Margin="24">
                     <dx:DXButton Content="Cancel" Command="{Binding CloseSignatureViewCommand}" TextColor="{AppThemeBinding Light=#FEFEFE, Dark={StaticResource Primary}}" Margin="4,0"/>
                     <dx:DXButton Content="Sign PDF" Command="{Binding Source={x:Reference drawingMvvmBehavior}, Path=AcceptDrawingCommand}" TextColor="{AppThemeBinding Light=#FEFEFE, Dark={StaticResource Primary}}" Margin="4,0"/>
-                </HorizontalStackLayout>
+                </dx:DXStackLayout>
             </Grid>
         </dxc:DXPopup>
     </Grid>
