--- a/CS/3-Draw_a_Custom_Signature/Views/MainPage.xaml
+++ b/CS/3-Draw_a_Custom_Signature/Views/MainPage.xaml
@@ -1,9 +1,6 @@
-<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:dxdf="clr-namespace:DevExpress.Maui.DataForm;assembly=DevExpress.Maui.Editors"
-    xmlns:dxc="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls" 
-    xmlns:dx="clr-namespace:DevExpress.Maui.Core;assembly=DevExpress.Maui.Core" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+    xmlns:dx="http://schemas.devexpress.com/maui"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     xmlns:local="clr-namespace:SignPDF;assembly=SignPDF" 
     xmlns:viewmodels="clr-namespace:SignPDF.ViewModels"
@@ -27,7 +24,7 @@
                 <Shadow Brush="Gray" Offset="4,8" Radius="10" />
             </dx:DXButton.Shadow>
         </dx:DXButton>
-        <dxc:DXPopup x:Name="signatureDrawerPopup" IsOpen="{Binding IsSignatureViewOpened, Mode=TwoWay}" ScrimColor="#50505050" AllowScrim="true">
+        <dx:DXPopup x:Name="signatureDrawerPopup" IsOpen="{Binding IsSignatureViewOpened, Mode=TwoWay}" ScrimColor="#50505050" AllowScrim="true">
             <Grid RowDefinitions="*,Auto">
                 <toolkit:DrawingView IsMultiLineModeEnabled="True" Background="White" Lines="{Binding SignatureLines, Mode=TwoWay}" x:Name="signatureDrawer" HeightRequest="300" WidthRequest="350">
                     <toolkit:DrawingView.Behaviors>
@@ -40,6 +37,6 @@
                     <dx:DXButton Content="Sign PDF" Command="{Binding Source={x:Reference drawingMvvmBehavior}, Path=AcceptDrawingCommand}" TextColor="{AppThemeBinding Light=#FEFEFE, Dark={StaticResource Primary}}" Margin="4,0"/>
                 </dx:DXStackLayout>
             </Grid>
-        </dxc:DXPopup>
+        </dx:DXPopup>
     </Grid>
 </ContentPage>
